--- a/src/App.css
+++ b/src/App.css
@@ -75,41 +75,27 @@ ul li {
 
 /* ############# Page-2 ############### */
 
-.page2 .background {
+.page2 {
   background: url("../img/homepage/resize-16597801141879415527resize16597798161508714415desktopbg2.jpg");
 
   position: absolute;
 
-  background-position: center;
-  background-size: contain;
-
-  background-repeat: no-repeat;
-
-  position: absolute;
-  width: 1520px;
+  width: 1519px;
   height: 1512px;
+  /* border: 2px solid red; */
 
-  top: 760px;
+  top: 815px;
 }
 
-.page2 .line1 {
-font-size: 70px;
-  position: absolute;
-  top: 7%;
-  left: 10%;
-  color: rgb(17, 17, 81);
-}
-.page2 .line2 {
+.page2 .line {
   font-size: 70px;
-
   position: absolute;
-  top: 12%;
-  left: 13%;
+  top: 6%;
+
   color: rgb(17, 17, 81);
 }
 
-.page2 .diagram{
-
+.page2 .diagram {
   position: absolute;
   top: 22%;
   left: 13%;
@@ -117,26 +103,98 @@ font-size: 70px;
 
 /* ############## Page-3 ############# */
 
-.page3{
+.page3 {
   position: absolute;
-width: 1362px;
-height: 1238px;
-left: 0px;
-top: 2329px;
+
+  width: 1519px;
+  /* height: 1512px; */
+  height: 1238px;
+  /* left: 30px; */
+  top: 2329px;
+  /* background-color: grey; */
 }
 
-.step1 .line2{
-  
+.step1 .line2 {
   width: 250px;
-  
-
 }
-.step2 .line2{
-  
+.step2 .line2 {
   width: 250px;
-  
+}
+.page3 .title {
+  font-size: 70px;
+  color: rgb(19, 19, 165);
+  margin-top: 6%;
+  font-weight: 700;
+}
+
+.step1 {
+  position: absolute;
+  top: 240px;
+  /* border: 2px solid black; */
+  left: 240px;
+  width:400px
+}
+
+.logo2 {
+  position: absolute;
+  left: 790px;
+  bottom: 690px;
+  /* border: 2px solid black; */
+}
+.logo1 {
+  position: absolute;
+  /* left: 90px; */
+  /* border: 2px solid black; */
+  top: 550px;
+  left: 170px;
+}
+.step2 {
+  position: absolute;
+  top: 620px;
+  /* border: 2px solid black; */
+  left: 960px;
+}
+
+.step1 .heading {
+  font-weight: 700;
+  font-size: 65px;
+  color: rgb(98, 160, 201);
+
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+}
+.step2 .heading {
+  font-weight: 700;
+  font-size: 65px;
+  color: rgb(98, 160, 201);
+
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+}
+.step1 .line1 {
+  font-size: 36px;
+  margin-top: 0.7rem;
+  color: rgb(17, 17, 81); width:430px
 
 }
-.page3 .title{
-  
+.step2 .line1 {
+  font-size: 35px;
+  margin-top: 0.7rem;
+  color: rgb(17, 17, 81); width:430px
+}
+.step1 .line2 {
+  font-size: 33px;
+  /* margin-top: 0.5rem; */
+  color: rgb(17, 17, 81);
+  /* letter-spacing: 1px; */
+  width: 430px;
+  color: grey;
+}
+.step2 .line2 {
+  font-size: 33px;
+  /* margin-top: 0.5rem; */
+  color: rgb(17, 17, 81);
+  /* letter-spacing: 1px; */
+  width: 430px;
+  color: grey;
 }
